--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,12 +117,12 @@ dependencies {
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     implementation 'com.google.android.play:core:1.10.0'
-    implementation 'com.github.t-yoshi:peca-android:3.3.4'
+    implementation 'com.github.t-yoshi:peca-android:94d7da41ac'
 
-    implementation 'com.google.firebase:firebase-crashlytics:18.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.1.0'
 
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha05'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha05'
