--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,69 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="org.peercast.pecaplay">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.peercast.pecaplay">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:name=".PecaPlayApplication"
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="false"
-            android:usesCleartextTraffic="true"
-            android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning">
+        android:name=".PecaPlayApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
-                android:name=".PecaPlayActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
+            android:name=".PecaPlayActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
             <meta-data
-                    android:name="android.app.searchable"
-                    android:resource="@xml/searchable" />
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
 
-        <activity android:name=".ViewerLaunchActivity" android:label="@string/app_name"/>
+        <activity
+            android:name=".ViewerLaunchActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".prefs.SettingsActivity"
+            android:label="@string/settings_activity" />
+
+        <activity android:name="com.google.android.gms.oss.licenses.OssLicensesActivity" />
+        <activity android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity" />
         <activity-alias
-                android:name=".PecaPlayViewer_WMV"
-                android:enabled="false"
-                android:targetActivity=".ViewerLaunchActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data
-                        android:host="localhost"
-                        android:pathPattern="/stream/.*\\.wmv"
-                        android:scheme="mmsh" />
-            </intent-filter>
-        </activity-alias>
-        <activity-alias
-                android:name=".PecaPlayViewer_FLV"
-                android:enabled="false"
-                android:targetActivity=".ViewerLaunchActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data
-                        android:host="localhost"
-                        android:pathPattern="/stream/.*\\.flv"
-                        android:scheme="http" />
-            </intent-filter>
-        </activity-alias>
-        <activity-alias
-                android:name=".PecaPlayViewer_MKV"
-                android:enabled="false"
-                android:targetActivity=".ViewerLaunchActivity">
+            android:name=".PecaPlayViewer_MKV"
+            android:enabled="false"
+            android:targetActivity=".ViewerLaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -71,26 +53,56 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                        android:host="localhost"
-                        android:pathPattern="/stream/.*\\.mkv"
-                        android:scheme="http" />
+                    android:host="localhost"
+                    android:pathPattern="/stream/.*\\.mkv"
+                    android:scheme="http" />
             </intent-filter>
         </activity-alias>
 
+        <activity-alias
+            android:name=".PecaPlayViewer_FLV"
+            android:enabled="false"
+            android:targetActivity=".ViewerLaunchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <activity
-                android:name=".prefs.SettingsActivity"
-                android:label="@string/settings_activity"/>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
 
-        <activity
-                android:name="com.google.android.gms.oss.licenses.OssLicensesActivity" />
-        <activity
-                android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity" />
+                <data
+                    android:host="localhost"
+                    android:pathPattern="/stream/.*\\.flv"
+                    android:scheme="http" />
+            </intent-filter>
+        </activity-alias>
+        <activity-alias
+            android:name=".PecaPlayViewer_WMV"
+            android:enabled="false"
+            android:targetActivity=".ViewerLaunchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="localhost"
+                    android:pathPattern="/stream/.*\\.wmv"
+                    android:scheme="mmsh" />
+            </intent-filter>
+        </activity-alias>
         <provider
-                android:name=".app.SuggestionProvider"
-                android:authorities="org.peercast.pecaplay.app.SuggestionProvider"
-                android:exported="false" />
+            android:name=".app.SuggestionProvider"
+            android:authorities="org.peercast.pecaplay.app.SuggestionProvider"
+            android:exported="false" />
+
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
