--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.8'
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.android.gms:oss-licenses-plugin:0.10.4'
@@ -24,13 +25,13 @@ buildscript {
         target_sdk_version = 30
 
         kotlinx_coroutines_version = "1.5.0"
+        serialization_version = "1.2.1"
 
         libpeercast_version = "7b5372169b"
 
         androidx_version = "1.3.0"
         lifecycle_version = "2.3.1"
         koin_version = '3.0.2'
-        moshi_version = "1.12.0"
         okhttp_version = "4.9.0"
         work_version = "2.5.0"
         glide_version = '4.11.0'
