--- a/pecaplay/build.gradle
+++ b/pecaplay/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'kotlinx-serialization'
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 apply plugin: 'com.google.firebase.crashlytics'
 
@@ -103,9 +104,12 @@ dependencies {
         exclude module: 'xpp3'
     }
 
-    implementation 'com.squareup.moshi:moshi:1.12.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:$serialization_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
+
+//    implementation 'com.squareup.moshi:moshi:1.12.0'
+//    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+//    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
