--- a/pecaplay/src/main/AndroidManifest.xml
+++ b/pecaplay/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:name=".PecaPlayActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
