--- a/pecaviewer/build.gradle
+++ b/pecaviewer/build.gradle
@@ -85,12 +85,12 @@ dependencies {
 
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
 
-    def exoplayer_version = "2.14.1"
+    def exoplayer_version = "2.14.2"
     implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     //implementation "com.google.android.exoplayer:exoplayer-dash:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     //implementation "com.google.android.exoplayer:extension-media2:$exoplayer_version"
-    //implementation "com.google.android.exoplayer:extension-okhttp:$exoplayer_version"
+    implementation "com.google.android.exoplayer:extension-okhttp:$exoplayer_version"
 
 
 //    implementation project(':libvlc')
