--- a/pecaplay/build.gradle
+++ b/pecaplay/build.gradle
@@ -17,8 +17,8 @@ android {
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
 
-        versionCode 7_99_99_00
-        versionName '8.0.0-rc1'
+        versionCode 8_00_00_00
+        versionName '8.0.0'
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
 
         javaCompileOptions {
