--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
         kotlinx_coroutines_version = "1.5.0"
         kotlinx_serialization_version = "1.2.1"
 
-        libpeercast_version = "4.0.4"
+        libpeercast_version = "f899595ec9"
 
         androidx_version = "1.3.1"
         lifecycle_version = "2.3.1"
