--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ buildscript {
         libpeercast_version = "f899595ec9"
 
         androidx_version = "1.3.1"
-        lifecycle_version = "2.3.1"
+        lifecycle_version = "2.4.0-alpha03"
         koin_version = '3.0.2'
         okhttp_version = "4.9.0"
         work_version = "2.5.0"
