--- a/pecaplay/build.gradle
+++ b/pecaplay/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
 
     implementation project(":pecaviewer")
