--- a/pecaplay/src/main/AndroidManifest.xml
+++ b/pecaplay/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         <activity
             android:name=".PecaPlayActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTask">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
