--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,14 @@ buildscript {
         libpeercast_version = "279492562a"
 
         androidx_version = "1.4.1"
-        core_ktx_version = "1.10.0-alpha01"
+        core_ktx_version = "1.10.0-alpha02"
         material_version = "1.8.0"
-        appcompat_version = "1.6.0"
+        appcompat_version = "1.6.1"
 
         lifecycle_version = "2.5.1"
         koin_version = "3.3.2"
         okhttp_version = "4.10.0"
-        work_version = "2.8.0-rc01"
+        work_version = "2.8.0"
         glide_version = '4.14.2'
         timber_version = "5.0.1"
     }
